smaller updates 2017 analysis

--- a/python/VHbb2017commonconfig/samples_mc.ini
+++ b/python/VHbb2017commonconfig/samples_mc.ini
@@ -107,30 +107,30 @@ NLOweightAT = (1.0+(sampleIndex==4000||sampleIndex==4100||sampleIndex==4200||sam
 # EXCL: use b-enriched exclusively in their phase-space (throw away overlap)
 # V11:  use both with reweighting to have same event weights to maximize stats (a lot more stats for boosted!)
 
-MethodWJ = NLOst
+#MethodWJ = NLOst
 #MethodWJ = V13 
-#MethodWJ = EXCL
+MethodWJ = EXCL
 #MethodWJ = V11 
 #MethodWJ = <!General|nTupleVersion!>
 
-MethodZJ = NLO
-#MethodZJ = EXCL
+#MethodZJ = NLO
+MethodZJ = EXCL
 #MethodZJ = V11
 #MethodZJ = V13
 #MethodZJ = <!General|nTupleVersion!>
 
-MethodDY = NLOst
+#MethodDY = NLOst
 #MethodDY = NOHT
-#MethodDY = EXCL
+MethodDY = EXCL
 #MethodDY = V11 
 #MethodDY = V13
 #MethodDY = <!General|nTupleVersion!>
 
 # differential reweighting of b-enriched/filtered samples to inclusive+ht binned
-#ReweightLHEVpt = ON
+ReweightLHEVpt = ON
 #ReweightLHEVpt = NEW
 # normlization reweighting of b-enriched/filtered samples to inclusive+ht binned
-ReweightLHEVpt = OFF
+#ReweightLHEVpt = OFF
 
 #weightMinJetPt_DY = (1.192-0.00422*min(min(hJets_0_pt_FSRrecovered,hJets_1_pt_FSRrecovered),120.0))
 #weightMinJetPt_WJ = (1.137-0.00218*min(min(hJets_0_pt_FSRrecovered,hJets_1_pt_FSRrecovered),120.0))
@@ -288,8 +288,9 @@ WJnlo_0J_NLOst = (LHE_NpNLO==0&&LHE_Vpt<50) + (LHE_NpNLO==0&&LHE_Vpt>=50&&LHE_Vp
 WJnlo_1J_NLOst = (LHE_NpNLO==1&&LHE_Vpt<50)*0.96485 + (LHE_NpNLO==1&&LHE_Vpt>=250&&LHE_Vpt<400)*0.09284 + (LHE_NpNLO==1&&LHE_Vpt>=400)*0.00066 + (LHE_NpNLO==1&&LHE_Vpt>=150&&LHE_Vpt<250)*0.00515 + (LHE_NpNLO==1&&LHE_Vpt>=100&&LHE_Vpt<150)*0.35462 + (LHE_NpNLO==1&&LHE_Vpt>=50&&LHE_Vpt<100)*0.62977
 WJnlo_2J_NLOst = (LHE_NpNLO==2&&LHE_Vpt>=250&&LHE_Vpt<400)*0.01339 + (LHE_NpNLO==2&&LHE_Vpt>=50&&LHE_Vpt<100)*0.90189 + (LHE_NpNLO==2&&LHE_Vpt>=150&&LHE_Vpt<250)*0.70693 + (LHE_NpNLO==2&&LHE_Vpt>=400)*0.10867 + (LHE_NpNLO==2&&LHE_Vpt<50)*0.96608 + (LHE_NpNLO==2&&LHE_Vpt>=100&&LHE_Vpt<150)*0.69730
 
-WJincl_EXCL = (((LHE_Nb==0&&nGenStatus2bHad==0)||LHE_Vpt<100)&&LHE_HT<70)
-WJ70_EXCL = ((LHE_Nb==0&&nGenStatus2bHad==0)||LHE_Vpt<100)
+WJincl_EXCL = (((LHE_Nb==0&&nGenStatus2bHad==0)||LHE_Vpt<100)&&LHE_HT<100)
+#WJ70_EXCL = ((LHE_Nb==0&&nGenStatus2bHad==0)||LHE_Vpt<100)
+WJ70_EXCL = 0.0
 WJ100_EXCL = ((LHE_Nb==0&&nGenStatus2bHad==0)||LHE_Vpt<100)
 WJ200_EXCL = ((LHE_Nb==0&&nGenStatus2bHad==0)||LHE_Vpt<100)
 WJ400_EXCL = ((LHE_Nb==0&&nGenStatus2bHad==0)||LHE_Vpt<100)
@@ -1087,6 +1088,7 @@ SF          = <!General|SF_WJets!>
 cut         = <!General|preselectionCut!>
 specialweight = <!Stitching|WJincl!>
 
+# sample missing in 2017
 [WJetsToLNu_HT-70To100_TuneCP5_13TeV-madgraphMLM-pythia8]
 sampleIndex = 4100
 sampleName  = WJetsHT70
@@ -3047,10 +3049,12 @@ WJets_0J    = <!.|WJets_0J_<!General|VjetFlavor!>!>
 WJets_1J    = <!.|WJets_1J_<!General|VjetFlavor!>!>
 WJets_2J    = <!.|WJets_2J_<!General|VjetFlavor!>!>
 
-WJets_lo  = <!Samples|WJetsHT0!>,<!Samples|WJetsHT70!>,<!Samples|WJetsHT100!>,<!Samples|WJetsHT200!>,<!Samples|WJetsHT400!>,<!Samples|WJetsHT600!>,<!Samples|WJetsHT800!>,<!Samples|WJetsHT1200!>,<!Samples|WJetsHT2500!>,<!Samples|WJetsB!>
+#WJets_lo  = <!Samples|WJetsHT0!>,<!Samples|WJetsHT70!>,<!Samples|WJetsHT100!>,<!Samples|WJetsHT200!>,<!Samples|WJetsHT400!>,<!Samples|WJetsHT600!>,<!Samples|WJetsHT800!>,<!Samples|WJetsHT1200!>,<!Samples|WJetsHT2500!>,<!Samples|WJetsB!>
+WJets_lo  = <!Samples|WJetsHT0!>,<!Samples|WJetsHT100!>,<!Samples|WJetsHT200!>,<!Samples|WJetsHT400!>,<!Samples|WJetsHT600!>,<!Samples|WJetsHT800!>,<!Samples|WJetsHT1200!>,<!Samples|WJetsHT2500!>,<!Samples|WJetsB!>
 WJets_nlo  = <!Samples|W1Jetsnlo0!>,<!Samples|W1Jetsnlo50!>,<!Samples|W1Jetsnlo100!>,<!Samples|W1Jetsnlo150!>,<!Samples|W1Jetsnlo250!>,<!Samples|W1Jetsnlo400!>,<!Samples|W2Jetsnlo0!>,<!Samples|W2Jetsnlo50!>,<!Samples|W2Jetsnlo100!>,<!Samples|W2Jetsnlo150!>,<!Samples|W2Jetsnlo250!>,<!Samples|W2Jetsnlo400!>,<!Samples|WJets_0J!>,<!Samples|WJets_1J!>,<!Samples|WJets_2J!>
 # change here in case LO samples should be used
-WJets  = <!Samples|WJets_nlo!>
+#WJets  = <!Samples|WJets_nlo!>
+WJets  = <!Samples|WJets_lo!>
 WJets_0b_udsg = 'WJetsHT0_0b_udsg', 'WJetsHT100_0b_udsg','WJetsHT200_0b_udsg','WJetsHT400_0b_udsg','WJetsHT600_0b_udsg','WJetsHT800_0b_udsg','WJetsHT1200_0b_udsg','WJetsHT2500_0b_udsg','WBJets100_0b_udsg','WBJets200_0b_udsg','WBGenFilter100_0b_udsg','WBGenFilter200_0b_udsg','W1Jetsnlo0_0b_udsg','W1Jetsnlo50_0b_udsg','W1Jetsnlo100_0b_udsg','W1Jetsnlo150_0b_udsg','W1Jetsnlo250_0b_udsg','W1Jetsnlo400_0b_udsg','W2Jetsnlo0_0b_udsg','W2Jetsnlo50_0b_udsg','W2Jetsnlo100_0b_udsg','W2Jetsnlo150_0b_udsg','W2Jetsnlo250_0b_udsg','W2Jetsnlo400_0b_udsg','WJets_0J_0b_udsg','WJets_1J_0b_udsg','WJets_2J_0b_udsg'
 WJets_0b_c = 'WJetsHT0_0b_c','WJetsHT100_0b_c','WJetsHT200_0b_c','WJetsHT400_0b_c','WJetsHT600_0b_c','WJetsHT800_0b_c','WJetsHT1200_0b_c','WJetsHT2500_0b_c','WBJets100_0b_c','WBJets200_0b_c','WBGenFilter100_0b_c','WBGenFilter200_0b_c','W1Jetsnlo0_0b_c','W1Jetsnlo50_0b_c','W1Jetsnlo100_0b_c','W1Jetsnlo150_0b_c','W1Jetsnlo250_0b_c','W1Jetsnlo400_0b_c','W2Jetsnlo0_0b_c','W2Jetsnlo50_0b_c','W2Jetsnlo100_0b_c','W2Jetsnlo150_0b_c','W2Jetsnlo250_0b_c','W2Jetsnlo400_0b_c','WJets_0J_0b_c','WJets_1J_0b_c','WJets_2J_0b_c'
 WJets_0b_2c = 'WJetsHT0_0b_2c','WJetsHT100_0b_2c','WJetsHT200_0b_2c','WJetsHT400_0b_2c','WJetsHT600_0b_2c','WJetsHT800_0b_2c','WJetsHT1200_0b_2c','WJetsHT2500_0b_2c','WBJets100_0b_2c','WBJets200_0b_2c','WBGenFilter100_0b_2c','WBGenFilter200_0b_2c','W1Jetsnlo0_0b_2c','W1Jetsnlo50_0b_2c','W1Jetsnlo100_0b_2c','W1Jetsnlo150_0b_2c','W1Jetsnlo250_0b_2c','W1Jetsnlo400_0b_2c','W2Jetsnlo0_0b_2c','W2Jetsnlo50_0b_2c','W2Jetsnlo100_0b_2c','W2Jetsnlo150_0b_2c','W2Jetsnlo250_0b_2c','W2Jetsnlo400_0b_2c','WJets_0J_0b_2c','WJets_1J_0b_2c','WJets_2J_0b_2c'
@@ -3105,7 +3109,8 @@ Z2Jetsnlo150 = <!.|Z2Jetsnlo150_<!General|VjetFlavor!>!>
 Z2Jetsnlo250 = <!.|Z2Jetsnlo250_<!General|VjetFlavor!>!>
 Z2Jetsnlo400 = <!.|Z2Jetsnlo400_<!General|VjetFlavor!>!>
 
-ZJets = <!Samples|ZJetsHT100!>, <!Samples|ZJetsHT200!>, <!Samples|ZJetsHT400!>, <!Samples|ZJetsHT600!>, <!Samples|ZJetsHT800!>, <!Samples|ZJetsHT1200!>, <!Samples|ZJetsHT2500!>, <!Samples|ZJB!>,<!Samples|Z1Jetsnlo50!>,<!Samples|Z1Jetsnlo150!>,<!Samples|Z1Jetsnlo250!>,<!Samples|Z1Jetsnlo400!>,<!Samples|Z2Jetsnlo50!>,<!Samples|Z2Jetsnlo150!>,<!Samples|Z2Jetsnlo250!>,<!Samples|Z2Jetsnlo400!>
+#ZJets = <!Samples|ZJetsHT100!>, <!Samples|ZJetsHT200!>, <!Samples|ZJetsHT400!>, <!Samples|ZJetsHT600!>, <!Samples|ZJetsHT800!>, <!Samples|ZJetsHT1200!>, <!Samples|ZJetsHT2500!>, <!Samples|ZJB!>,<!Samples|Z1Jetsnlo50!>,<!Samples|Z1Jetsnlo150!>,<!Samples|Z1Jetsnlo250!>,<!Samples|Z1Jetsnlo400!>,<!Samples|Z2Jetsnlo50!>,<!Samples|Z2Jetsnlo150!>,<!Samples|Z2Jetsnlo250!>,<!Samples|Z2Jetsnlo400!>
+ZJets = <!Samples|ZJetsHT100!>, <!Samples|ZJetsHT200!>, <!Samples|ZJetsHT400!>, <!Samples|ZJetsHT600!>, <!Samples|ZJetsHT800!>, <!Samples|ZJetsHT1200!>, <!Samples|ZJetsHT2500!>, <!Samples|ZJB!>
 
 ZJets_0b = 'ZJetsHT100_0b','ZJetsHT200_0b','ZJetsHT400_0b','ZJetsHT600_0b','ZJetsHT800_0b','ZJetsHT1200_0b','ZJetsHT2500_0b','ZBJets100_0b','ZBJets200_0b','ZBGenFilter100_0b','ZBGenFilter200_0b','Z1Jetsnlo50_0b','Z1Jetsnlo150_0b','Z1Jetsnlo250_0b','Z1Jetsnlo400_0b','Z2Jetsnlo50_0b','Z2Jetsnlo150_0b','Z2Jetsnlo250_0b','Z2Jetsnlo400_0b' 
 ZJets_0b_udsg = 'ZJetsHT100_0b_udsg','ZJetsHT200_0b_udsg','ZJetsHT400_0b_udsg','ZJetsHT600_0b_udsg','ZJetsHT800_0b_udsg','ZJetsHT1200_0b_udsg','ZJetsHT2500_0b_udsg','ZBJets100_0b_udsg','ZBJets200_0b_udsg','ZBGenFilter100_0b_udsg','ZBGenFilter200_0b_udsg','Z1Jetsnlo50_0b_udsg','Z1Jetsnlo150_0b_udsg','Z1Jetsnlo250_0b_udsg','Z1Jetsnlo400_0b_udsg','Z2Jetsnlo50_0b_udsg','Z2Jetsnlo150_0b_udsg','Z2Jetsnlo250_0b_udsg','Z2Jetsnlo400_0b_udsg'
@@ -3177,7 +3182,7 @@ DYJetsBGenFilter = <!.|DYJetsBGenFilter_<!General|VjetFlavor!>!>
 DYnlo = <!Samples|DY1nlo50_<!General|VjetFlavor!>!>,<!Samples|DY1nlo150_<!General|VjetFlavor!>!>,<!Samples|DY1nlo250_<!General|VjetFlavor!>!>,<!Samples|DY1nlo400_<!General|VjetFlavor!>!>,<!Samples|DY2nlo50_<!General|VjetFlavor!>!>,<!Samples|DY2nlo150_<!General|VjetFlavor!>!>,<!Samples|DY2nlo250_<!General|VjetFlavor!>!>,<!Samples|DY2nlo400_<!General|VjetFlavor!>!>,<!Samples|DYnloINCL_<!General|VjetFlavor!>!>,<!Samples|DYJets_0J_<!General|VjetFlavor!>!>,<!Samples|DYJets_1J_<!General|VjetFlavor!>!>,<!Samples|DYJets_2J_<!General|VjetFlavor!>!>
 DYlo = <!Samples|DYm4!>,<!Samples|DYm50!>,<!Samples|DYBJets!>,<!Samples|DYJetsBGenFilter!>
 #DY   = <!Samples|DYlo!>,<!Samples|DYnlo!>
-DY   = <!Samples|DYnlo!>
+DY   = <!Samples|DYlo!>
 
 
 #DynloIncl   = 'DYnloIncl_0b','DYnloIncl_1b','DYnloIncl_2b'
