--- a/python/VHbb2017commonconfig/systematics.ini
+++ b/python/VHbb2017commonconfig/systematics.ini
@@ -627,26 +627,25 @@ CheckDuplicateEvents = CheckDuplicateEvents.CheckDuplicateEvents()
 [Weights]
 
 #----- LHE scale ------#
-CMS_LHE_weights_scale_muR_ZH_UP:  <!Weights|weightF!>*LHEScaleWeight[7]
-CMS_LHE_weights_scale_muR_WH_UP:  <!Weights|weightF!>*LHEScaleWeight[7]
-CMS_LHE_weights_scale_muR_ggZH_UP:  <!Weights|weightF!>*LHEScaleWeight[7]
-CMS_LHE_weights_scale_muR_TT_UP:  <!Weights|weightF!>*LHEScaleWeight[7]
-CMS_LHE_weights_scale_muR_Zj0b_UP:  <!Weights|weightF!>*LHEScaleWeight[7]
-CMS_LHE_weights_scale_muR_Zj0b_udsg_UP:  <!Weights|weightF!>*LHEScaleWeight[7]
-CMS_LHE_weights_scale_muR_Zj0b_c_UP:  <!Weights|weightF!>*LHEScaleWeight[7]
-CMS_LHE_weights_scale_muR_Zj1b_UP:  <!Weights|weightF!>*LHEScaleWeight[7]
-CMS_LHE_weights_scale_muR_Zj2b_UP:  <!Weights|weightF!>*LHEScaleWeight[7]
-CMS_LHE_weights_scale_muR_Wj0b_udsg_UP:  <!Weights|weightF!>*LHEScaleWeight[7]
-CMS_LHE_weights_scale_muR_Wj0b_c_UP:  <!Weights|weightF!>*LHEScaleWeight[7]
-CMS_LHE_weights_scale_muR_Wj0b_UP:  <!Weights|weightF!>*LHEScaleWeight[7]
-CMS_LHE_weights_scale_muR_Wj0b_2c_UP:  <!Weights|weightF!>*LHEScaleWeight[7]
-CMS_LHE_weights_scale_muR_Wj1b_UP:  <!Weights|weightF!>*LHEScaleWeight[7]
-CMS_LHE_weights_scale_muR_Wj1b_udsg_UP:  <!Weights|weightF!>*LHEScaleWeight[7]
-CMS_LHE_weights_scale_muR_Wj1b_c_UP:  <!Weights|weightF!>*LHEScaleWeight[7]
-CMS_LHE_weights_scale_muR_Wj2b_UP:  <!Weights|weightF!>*LHEScaleWeight[7]
-CMS_LHE_weights_scale_muR_QCD_UP:  <!Weights|weightF!>*LHEScaleWeight[7]
-CMS_LHE_weights_scale_muR_VVHF_UP:  <!Weights|weightF!>*LHEScaleWeight[7]
-CMS_LHE_weights_scale_muR_VVLF_UP:  <!Weights|weightF!>*LHEScaleWeight[7]
+CMS_LHE_weights_scale_muR_ZH_UP:  <!Weights|weightF!>*((LHEScaleWeight[7])*(nLHEScaleWeight==9) + (LHEScaleWeight[6])*(nLHEScaleWeight==8))
+CMS_LHE_weights_scale_muR_WH_UP:  <!Weights|weightF!>*((LHEScaleWeight[7])*(nLHEScaleWeight==9) + (LHEScaleWeight[6])*(nLHEScaleWeight==8))
+CMS_LHE_weights_scale_muR_ggZH_UP:  <!Weights|weightF!>*((LHEScaleWeight[7])*(nLHEScaleWeight==9) + (LHEScaleWeight[6])*(nLHEScaleWeight==8))
+CMS_LHE_weights_scale_muR_TT_UP:  <!Weights|weightF!>*((LHEScaleWeight[7])*(nLHEScaleWeight==9) + (LHEScaleWeight[6])*(nLHEScaleWeight==8))
+CMS_LHE_weights_scale_muR_Zj0b_UP:  <!Weights|weightF!>*((LHEScaleWeight[7])*(nLHEScaleWeight==9) + (LHEScaleWeight[6])*(nLHEScaleWeight==8))
+CMS_LHE_weights_scale_muR_Zj0b_udsg_UP:  <!Weights|weightF!>*((LHEScaleWeight[7])*(nLHEScaleWeight==9) + (LHEScaleWeight[6])*(nLHEScaleWeight==8))
+CMS_LHE_weights_scale_muR_Zj0b_c_UP:  <!Weights|weightF!>*((LHEScaleWeight[7])*(nLHEScaleWeight==9) + (LHEScaleWeight[6])*(nLHEScaleWeight==8))
+CMS_LHE_weights_scale_muR_Zj1b_UP:  <!Weights|weightF!>*((LHEScaleWeight[7])*(nLHEScaleWeight==9) + (LHEScaleWeight[6])*(nLHEScaleWeight==8))
+CMS_LHE_weights_scale_muR_Zj2b_UP:  <!Weights|weightF!>*((LHEScaleWeight[7])*(nLHEScaleWeight==9) + (LHEScaleWeight[6])*(nLHEScaleWeight==8))
+CMS_LHE_weights_scale_muR_Zjb_UP:  <!Weights|weightF!>*((LHEScaleWeight[7])*(nLHEScaleWeight==9) + (LHEScaleWeight[6])*(nLHEScaleWeight==8))
+CMS_LHE_weights_scale_muR_Wj0b_UP:  <!Weights|weightF!>*((LHEScaleWeight[7])*(nLHEScaleWeight==9) + (LHEScaleWeight[6])*(nLHEScaleWeight==8))
+CMS_LHE_weights_scale_muR_Wj0b_udsg_UP:  <!Weights|weightF!>*((LHEScaleWeight[7])*(nLHEScaleWeight==9) + (LHEScaleWeight[6])*(nLHEScaleWeight==8))
+CMS_LHE_weights_scale_muR_Wj0b_c_UP:  <!Weights|weightF!>*((LHEScaleWeight[7])*(nLHEScaleWeight==9) + (LHEScaleWeight[6])*(nLHEScaleWeight==8))
+CMS_LHE_weights_scale_muR_Wj1b_UP:  <!Weights|weightF!>*((LHEScaleWeight[7])*(nLHEScaleWeight==9) + (LHEScaleWeight[6])*(nLHEScaleWeight==8))
+CMS_LHE_weights_scale_muR_Wj2b_UP:  <!Weights|weightF!>*((LHEScaleWeight[7])*(nLHEScaleWeight==9) + (LHEScaleWeight[6])*(nLHEScaleWeight==8))
+CMS_LHE_weights_scale_muR_Wjb_UP:  <!Weights|weightF!>*((LHEScaleWeight[7])*(nLHEScaleWeight==9) + (LHEScaleWeight[6])*(nLHEScaleWeight==8))
+CMS_LHE_weights_scale_muR_QCD_UP:  <!Weights|weightF!>*((LHEScaleWeight[7])*(nLHEScaleWeight==9) + (LHEScaleWeight[6])*(nLHEScaleWeight==8))
+CMS_LHE_weights_scale_muR_VVHF_UP:  <!Weights|weightF!>*((LHEScaleWeight[7])*(nLHEScaleWeight==9) + (LHEScaleWeight[6])*(nLHEScaleWeight==8))
+CMS_LHE_weights_scale_muR_VVLF_UP:  <!Weights|weightF!>*((LHEScaleWeight[7])*(nLHEScaleWeight==9) + (LHEScaleWeight[6])*(nLHEScaleWeight==8))
 CMS_LHE_weights_scale_muR_ZH_DOWN: <!Weights|weightF!>*LHEScaleWeight[1]
 CMS_LHE_weights_scale_muR_WH_DOWN: <!Weights|weightF!>*LHEScaleWeight[1]
 CMS_LHE_weights_scale_muR_ggZH_DOWN: <!Weights|weightF!>*LHEScaleWeight[1]
@@ -656,38 +655,36 @@ CMS_LHE_weights_scale_muR_Zj0b_udsg_DOWN: <!Weights|weightF!>*LHEScaleWeight[1]
 CMS_LHE_weights_scale_muR_Zj0b_c_DOWN: <!Weights|weightF!>*LHEScaleWeight[1]
 CMS_LHE_weights_scale_muR_Zj1b_DOWN: <!Weights|weightF!>*LHEScaleWeight[1]
 CMS_LHE_weights_scale_muR_Zj2b_DOWN: <!Weights|weightF!>*LHEScaleWeight[1]
+CMS_LHE_weights_scale_muR_Zjb_DOWN: <!Weights|weightF!>*LHEScaleWeight[1]
 CMS_LHE_weights_scale_muR_Wj0b_DOWN: <!Weights|weightF!>*LHEScaleWeight[1]
 CMS_LHE_weights_scale_muR_Wj0b_udsg_DOWN: <!Weights|weightF!>*LHEScaleWeight[1]
 CMS_LHE_weights_scale_muR_Wj0b_c_DOWN: <!Weights|weightF!>*LHEScaleWeight[1]
-CMS_LHE_weights_scale_muR_Wj0b_2c_DOWN: <!Weights|weightF!>*LHEScaleWeight[1]
 CMS_LHE_weights_scale_muR_Wj1b_DOWN: <!Weights|weightF!>*LHEScaleWeight[1]
-CMS_LHE_weights_scale_muR_Wj1b_udsg_DOWN: <!Weights|weightF!>*LHEScaleWeight[1]
-CMS_LHE_weights_scale_muR_Wj1b_c_DOWN: <!Weights|weightF!>*LHEScaleWeight[1]
 CMS_LHE_weights_scale_muR_Wj2b_DOWN: <!Weights|weightF!>*LHEScaleWeight[1]
+CMS_LHE_weights_scale_muR_Wjb_DOWN: <!Weights|weightF!>*LHEScaleWeight[1]
 CMS_LHE_weights_scale_muR_QCD_DOWN: <!Weights|weightF!>*LHEScaleWeight[1]
 CMS_LHE_weights_scale_muR_VVHF_DOWN: <!Weights|weightF!>*LHEScaleWeight[1]
 CMS_LHE_weights_scale_muR_VVLF_DOWN: <!Weights|weightF!>*LHEScaleWeight[1]
 
-CMS_LHE_weights_scale_muF_ZH_UP: <!Weights|weightF!>*LHEScaleWeight[5]
-CMS_LHE_weights_scale_muF_WH_UP: <!Weights|weightF!>*LHEScaleWeight[5]
-CMS_LHE_weights_scale_muF_ggZH_UP: <!Weights|weightF!>*LHEScaleWeight[5]
-CMS_LHE_weights_scale_muF_TT_UP: <!Weights|weightF!>*LHEScaleWeight[5]
-CMS_LHE_weights_scale_muF_Zj0b_UP: <!Weights|weightF!>*LHEScaleWeight[5]
-CMS_LHE_weights_scale_muF_Zj0b_udsg_UP: <!Weights|weightF!>*LHEScaleWeight[5]
-CMS_LHE_weights_scale_muF_Zj0b_c_UP: <!Weights|weightF!>*LHEScaleWeight[5]
-CMS_LHE_weights_scale_muF_Zj1b_UP: <!Weights|weightF!>*LHEScaleWeight[5]
-CMS_LHE_weights_scale_muF_Zj2b_UP: <!Weights|weightF!>*LHEScaleWeight[5]
-CMS_LHE_weights_scale_muF_Wj0b_UP: <!Weights|weightF!>*LHEScaleWeight[5]
-CMS_LHE_weights_scale_muF_Wj0b_udsg_UP: <!Weights|weightF!>*LHEScaleWeight[5]
-CMS_LHE_weights_scale_muF_Wj0b_c_UP: <!Weights|weightF!>*LHEScaleWeight[5]
-CMS_LHE_weights_scale_muF_Wj0b_2c_UP: <!Weights|weightF!>*LHEScaleWeight[5]
-CMS_LHE_weights_scale_muF_Wj1b_UP: <!Weights|weightF!>*LHEScaleWeight[5]
-CMS_LHE_weights_scale_muF_Wj1b_udsg_UP: <!Weights|weightF!>*LHEScaleWeight[5]
-CMS_LHE_weights_scale_muF_Wj1b_c_UP: <!Weights|weightF!>*LHEScaleWeight[5]
-CMS_LHE_weights_scale_muF_Wj2b_UP: <!Weights|weightF!>*LHEScaleWeight[5]
-CMS_LHE_weights_scale_muF_QCD_UP: <!Weights|weightF!>*LHEScaleWeight[5]
-CMS_LHE_weights_scale_muF_VVHF_UP: <!Weights|weightF!>*LHEScaleWeight[5]
-CMS_LHE_weights_scale_muF_VVLF_UP: <!Weights|weightF!>*LHEScaleWeight[5]
+CMS_LHE_weights_scale_muF_ZH_UP: <!Weights|weightF!>*((LHEScaleWeight[5])*(nLHEScaleWeight==9) + (LHEScaleWeight[4])*(nLHEScaleWeight==8))
+CMS_LHE_weights_scale_muF_WH_UP: <!Weights|weightF!>*((LHEScaleWeight[5])*(nLHEScaleWeight==9) + (LHEScaleWeight[4])*(nLHEScaleWeight==8))
+CMS_LHE_weights_scale_muF_ggZH_UP: <!Weights|weightF!>*((LHEScaleWeight[5])*(nLHEScaleWeight==9) + (LHEScaleWeight[4])*(nLHEScaleWeight==8))
+CMS_LHE_weights_scale_muF_TT_UP: <!Weights|weightF!>*((LHEScaleWeight[5])*(nLHEScaleWeight==9) + (LHEScaleWeight[4])*(nLHEScaleWeight==8))
+CMS_LHE_weights_scale_muF_Zj0b_UP: <!Weights|weightF!>*((LHEScaleWeight[5])*(nLHEScaleWeight==9) + (LHEScaleWeight[4])*(nLHEScaleWeight==8))
+CMS_LHE_weights_scale_muF_Zj0b_udsg_UP: <!Weights|weightF!>*((LHEScaleWeight[5])*(nLHEScaleWeight==9) + (LHEScaleWeight[4])*(nLHEScaleWeight==8))
+CMS_LHE_weights_scale_muF_Zj0b_c_UP: <!Weights|weightF!>*((LHEScaleWeight[5])*(nLHEScaleWeight==9) + (LHEScaleWeight[4])*(nLHEScaleWeight==8))
+CMS_LHE_weights_scale_muF_Zj1b_UP: <!Weights|weightF!>*((LHEScaleWeight[5])*(nLHEScaleWeight==9) + (LHEScaleWeight[4])*(nLHEScaleWeight==8))
+CMS_LHE_weights_scale_muF_Zj2b_UP: <!Weights|weightF!>*((LHEScaleWeight[5])*(nLHEScaleWeight==9) + (LHEScaleWeight[4])*(nLHEScaleWeight==8))
+CMS_LHE_weights_scale_muF_Zjb_UP: <!Weights|weightF!>*((LHEScaleWeight[5])*(nLHEScaleWeight==9) + (LHEScaleWeight[4])*(nLHEScaleWeight==8))
+CMS_LHE_weights_scale_muF_Wj0b_UP: <!Weights|weightF!>*((LHEScaleWeight[5])*(nLHEScaleWeight==9) + (LHEScaleWeight[4])*(nLHEScaleWeight==8))
+CMS_LHE_weights_scale_muF_Wj0b_udsg_UP: <!Weights|weightF!>*((LHEScaleWeight[5])*(nLHEScaleWeight==9) + (LHEScaleWeight[4])*(nLHEScaleWeight==8))
+CMS_LHE_weights_scale_muF_Wj0b_c_UP: <!Weights|weightF!>*((LHEScaleWeight[5])*(nLHEScaleWeight==9) + (LHEScaleWeight[4])*(nLHEScaleWeight==8))
+CMS_LHE_weights_scale_muF_Wj1b_UP: <!Weights|weightF!>*((LHEScaleWeight[5])*(nLHEScaleWeight==9) + (LHEScaleWeight[4])*(nLHEScaleWeight==8))
+CMS_LHE_weights_scale_muF_Wj2b_UP: <!Weights|weightF!>*((LHEScaleWeight[5])*(nLHEScaleWeight==9) + (LHEScaleWeight[4])*(nLHEScaleWeight==8))
+CMS_LHE_weights_scale_muF_Wjb_UP: <!Weights|weightF!>*((LHEScaleWeight[5])*(nLHEScaleWeight==9) + (LHEScaleWeight[4])*(nLHEScaleWeight==8))
+CMS_LHE_weights_scale_muF_QCD_UP: <!Weights|weightF!>*((LHEScaleWeight[5])*(nLHEScaleWeight==9) + (LHEScaleWeight[4])*(nLHEScaleWeight==8))
+CMS_LHE_weights_scale_muF_VVHF_UP: <!Weights|weightF!>*((LHEScaleWeight[5])*(nLHEScaleWeight==9) + (LHEScaleWeight[4])*(nLHEScaleWeight==8))
+CMS_LHE_weights_scale_muF_VVLF_UP: <!Weights|weightF!>*((LHEScaleWeight[5])*(nLHEScaleWeight==9) + (LHEScaleWeight[4])*(nLHEScaleWeight==8))
 CMS_LHE_weights_scale_muF_ZH_DOWN: <!Weights|weightF!>*LHEScaleWeight[3]
 CMS_LHE_weights_scale_muF_WH_DOWN: <!Weights|weightF!>*LHEScaleWeight[3]
 CMS_LHE_weights_scale_muF_ggZH_DOWN: <!Weights|weightF!>*LHEScaleWeight[3]
@@ -697,14 +694,13 @@ CMS_LHE_weights_scale_muF_Zj0b_udsg_DOWN: <!Weights|weightF!>*LHEScaleWeight[3]
 CMS_LHE_weights_scale_muF_Zj0b_c_DOWN: <!Weights|weightF!>*LHEScaleWeight[3]
 CMS_LHE_weights_scale_muF_Zj1b_DOWN: <!Weights|weightF!>*LHEScaleWeight[3]
 CMS_LHE_weights_scale_muF_Zj2b_DOWN: <!Weights|weightF!>*LHEScaleWeight[3]
+CMS_LHE_weights_scale_muF_Zjb_DOWN: <!Weights|weightF!>*LHEScaleWeight[3]
 CMS_LHE_weights_scale_muF_Wj0b_DOWN: <!Weights|weightF!>*LHEScaleWeight[3]
 CMS_LHE_weights_scale_muF_Wj0b_udsg_DOWN: <!Weights|weightF!>*LHEScaleWeight[3]
 CMS_LHE_weights_scale_muF_Wj0b_c_DOWN: <!Weights|weightF!>*LHEScaleWeight[3]
-CMS_LHE_weights_scale_muF_Wj0b_2c_DOWN: <!Weights|weightF!>*LHEScaleWeight[3]
 CMS_LHE_weights_scale_muF_Wj1b_DOWN: <!Weights|weightF!>*LHEScaleWeight[3]
-CMS_LHE_weights_scale_muF_Wj1b_udsg_DOWN: <!Weights|weightF!>*LHEScaleWeight[3]
-CMS_LHE_weights_scale_muF_Wj1b_c_DOWN: <!Weights|weightF!>*LHEScaleWeight[3]
 CMS_LHE_weights_scale_muF_Wj2b_DOWN: <!Weights|weightF!>*LHEScaleWeight[3]
+CMS_LHE_weights_scale_muF_Wjb_DOWN: <!Weights|weightF!>*LHEScaleWeight[3]
 CMS_LHE_weights_scale_muF_QCD_DOWN: <!Weights|weightF!>*LHEScaleWeight[3]
 CMS_LHE_weights_scale_muF_VVHF_DOWN: <!Weights|weightF!>*LHEScaleWeight[3]
 CMS_LHE_weights_scale_muF_VVLF_DOWN: <!Weights|weightF!>*LHEScaleWeight[3]
@@ -749,8 +745,8 @@ CMS_vhbb_Vjets_pdfwgt_2lep_DOWN: <!Weights|weightF!>*(1.0 + (sampleIndex>=11000&
 #CMS_vhbb_vjetnlodetajjrw_13TeV_UP:        <!Weights|weight_noNLO!>*<!Weights|weightNLO!>*<!Weights|weightNLO!>
 #CMS_vhbb_vjetnlodetajjrw_13TeV_DOWN:      <!Weights|weight_noNLO!>
 
-CMS_vhbb_vjetnlodetajjrw_13TeV_UP:   <!Weights|weightF!>*weightLOtoNLO_2016
-CMS_vhbb_vjetnlodetajjrw_13TeV_DOWN: <!Weights|weightF!>/weightLOtoNLO_2016 
+CMS_vhbb_vjetnlodetajjrw_13TeV_UP:   <!Weights|weightF!>*weightLOtoNLO
+CMS_vhbb_vjetnlodetajjrw_13TeV_DOWN: <!Weights|weightF!>/weightLOtoNLO 
 
 # V2
 #CMS_vhbb_vjetnlovptrw_p0_13TeV_UP:   <!Weights|weightF!>/weightLOtoNLO_LHEVptV2*weightLOtoNLO_LHEVptV2_p0_Up
