--- a/python/VHbb2017commonconfig/vhbbPlotDef.ini
+++ b/python/VHbb2017commonconfig/vhbbPlotDef.ini
@@ -2035,9 +2035,10 @@ max     = 60
 xAxis = genWeight
 relPath = genWeight
 nBins = 100
-min = 0
-max = 0.4
+min = -1000.0
+max = 1000.0
 weightF = 1.0
+log = True
 
 [plotDef:puWeight]
 relPath = puWeight
